--- a/dcs_react/src/index.css
+++ b/dcs_react/src/index.css
@@ -41,23 +41,9 @@ code {
 .depth2.hover{opacity: 1 !important; visibility: visible;}
 .header .depth2 li{display: inline-flex;}
 .gnb .depth1[aria-expanded="true"] + .depth2 {opacity: 1;visibility: visible;transform: translateY(-1.6em);}
-.gnb .depth1[aria-expanded="true"] .subcontent {
-  height: calc(var(--depth2-height, 100%));
-}
-.depth1.hover, .depth2.hover {
-  color: #007bff; /* hover 시 파란색 */
-}
-
-.depth1.underline::after {
-  content: "";
-  position: absolute;
-  bottom: 0; /* 글자 바로 아래로 배치 */
-  left: 0;
-  width: 100%;
-  height: 2px; /* 언더라인 두께 */
-  background-color: #007bff; /* 언더라인 색상 */
-  animation: underlineEnter 0.3s forwards; /* 애니메이션 */
-}
+.gnb .depth1[aria-expanded="true"] .subcontent {height: calc(var(--depth2-height, 100%));}
+.depth1.hover, .depth2.hover {color: #007bff; }
+.depth1.underline::after {content: "";position: absolute;bottom: 0; left: 0;width: 100%;height: 2px; background-color: #007bff;animation: underlineEnter 0.3s forwards; transform: translateY(-2em);}
 @keyframes underlineEnter {
   from {
     width: 100%;
@@ -80,6 +66,7 @@ code {
     left: 0;
   }
 }
+
 /****** main ******/
 
 /****** footer ******/
