--- a/dcs_react/src/index.css
+++ b/dcs_react/src/index.css
@@ -29,7 +29,7 @@ code {
 .header a{text-decoration: none; color: #fff;}
 .header .nav .gnb{display: flex;}
 .header .nav ul{list-style-type: none;padding: 0;margin: 0;gap: 7.1333333333em;}
-.header .depth2 ul{gap: .4333333333em; display: grid;place-items: start;padding-right: 6em;}
+.header .depth2 ul{gap: .4333333333em; display: grid;place-items: start;}
 .header .depth2 ul a{white-space: nowrap;}
 .header .gnb > li{position: relative;}
 .header .depth2{position: absolute;opacity: 0;visibility: hidden;transition: opacity 0.3s ease, visibility 0.3s ease;left: 0;
