--- a/dcs_react/src/index.css
+++ b/dcs_react/src/index.css
@@ -16,7 +16,6 @@ code {
   --header-height: 100px;
 }
 .App{position: relative;}
-
 /****** header  ******/
 .header{width: 100%;position: fixed;background-color: rgba(255, 255, 255, 0);z-index: 1000;transition: background-color 0.3s, box-shadow 0.3s;transition: transform calc(var(--anim-duration)* 6) cubic-bezier(.165,.84,.44,1), background calc(var(--anim-duration)* 3);letter-spacing: 0.05em;}
 .header::before{content: "";position: absolute;top: 0;left: 0;right: 0;background: rgb(20 38 129 / 57%);height: var(--header-bg-height, 0%);opacity: var(--header-bg-opacity, 1);transition: height calc(var(--anim-duration)* 5) cubic-bezier(.23,1,.32,1), opacity calc(var(--anim-duration)* 3);transition-delay: calc(var(--anim-duration)* 1);}
@@ -71,6 +70,16 @@ code {
 
 /****** main ******/
 
+
+/****** notice ******/
+.notice{width: 140rem;max-width: calc(100% - 4rem);margin-right: auto; margin-left: auto;position: relative;}
+.notice .main_wrap{position: relative;width: 140rem;padding-bottom: 9rem;max-width: calc(100% - 4rem);margin-right: auto;margin-left: auto;position: relative;}
+.notice .visual{position: relative;height: 26.3rem;margin-bottom: 5rem;color: #fff;text-align: left;}
+.notice .img{width: 100vw; height: 100%;position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);display: block;overflow: hidden;}
+.notice .img img{max-width: inherit;width: 100%;height: 100%;object-fit: cover;transform: scale(1.1);animation: visual_scale 7s; animation-fill-mode: forwards;}
+@keyframes visual_scale {
+  100%{transform:scale(1)}
+}
 /****** footer ******/
 .footer {
   position: relative; 
