--- a/dcs_react/src/index.css
+++ b/dcs_react/src/index.css
@@ -81,14 +81,15 @@ code {
   100%{transform:scale(1)}
 }
 /****** footer ******/
-.footer {
-  position: relative; 
-  width: 100%;
-  background-color: #333; 
-  color: white;
-  text-align: center;
-  padding: 20px 0;
-}
-
-
-
+.footer {position: relative; width: 100%;background-color: #333; color: white;text-align: center;padding: 20px 0;}
+.footer .main_wrap{position: relative;width: 140rem;max-width: calc(100% - 4rem);margin-right: auto;margin-left: auto;position: relative;}
+.footer .f-top{display: flex;align-items: center;justify-content: space-between;border-bottom: 1px solid #fff;padding: 1.4rem 0;}
+.footer .t-top-l{font-weight: 700;font-size: 1.6rem;}
+.footer .t-top-r{display: flex;gap: 1rem;font-size: 1.8rem;}
+.footer .f-bottom{text-align: left;}
+.footer .f-bottom p {margin-bottom: 0;}
+.footer .f-bottom span{position: relative;padding-right: 3px;padding-right: 2rem;}
+.footer .f-bottom span:not(:nth-child(4))::before{position: absolute;content: "";height: 100%;border-right: 1px solid #fff;right: 0.8rem;}
+.footer .copyright{text-align: left;padding: 3rem 0 0 0;color: rgba(255, 255, 255, 0.4);font-size: 0.8rem;}
+.footer a{color: #fff;}
+.footer .pwr{font-size: 0.8rem;}
