--- a/dcs_react/src/index.css
+++ b/dcs_react/src/index.css
@@ -74,8 +74,29 @@ code {
 }
 
 /****** main ******/
+.main .main_wrap{position: relative !important;width: 140rem;padding-bottom: 9rem;max-width: calc(100% - 4rem);margin-right: auto;margin-left: auto;position: relative;}
+.main .section{padding: 5.6rem 0 5rem;}
+.main .section.visual2{padding: 5.6rem 0 5rem;padding-top: 0;}
+.main .visual1{width: 100%;display: flex;align-items: center;justify-content: space-between;}
+.main .visual1 .about{display: flex;max-width: 32.5rem;align-items: center;text-align: left;}
+.main .visual1 .about-l{width: 25rem;}
+.main .visual1 .about-l h1{font-size: 3rem;text-align: left;font-weight: 900;}
+.main .visual1 .about-text{padding-left: 1.1rem;}
+.main .visual1 .about-text h2{margin: 0; font-size: 1.8rem;}
+.main .visual1 .about-text p{font-size: 1.2rem;margin-top: 0.5rem;font-weight: 500;}
+.main .visual1 img{display: block;}
+.main .visual1 .about-img{position: relative;padding: 1.2rem;}
+.main .visual1 .about-img::before{animation: rotate 20s infinite linear;content: "";position: absolute;left: 0;top: 0;width: 100%;height: 100%;background-size: contain;background: url(../src/images/img_sec1_2.png) no-repeat center;}
+.main .motion{opacity: 0;position: relative;transition: all .8s ease;transform: translateY(3rem);}
+.main .section.action{top: 0;opacity: 1;transform: translateY(0);}
+.blue{color: #007bff;}
+@keyframes rotate{
+  100%{transform:rotate(360deg)}
+}
 
-
+.main .visual2 ul{list-style-type: none;padding: 0;display: flex;justify-content: space-around;}
+.main .visual2 ul li{list-style-type: none;}
+.main .visual2 a{text-decoration: none;}
 /****** notice ******/
 .notice{width: 140rem;max-width: calc(100% - 4rem);margin-right: auto; margin-left: auto;position: relative;}
 .notice .main_wrap{position: relative;width: 140rem;padding-bottom: 9rem;max-width: calc(100% - 4rem);margin-right: auto;margin-left: auto;position: relative;}
