--- a/dcs_react/src/index.css
+++ b/dcs_react/src/index.css
@@ -95,8 +95,35 @@ code {
 }
 
 .main .visual2 ul{list-style-type: none;padding: 0;display: flex;justify-content: space-around;}
-.main .visual2 ul li{list-style-type: none;}
+.main .visual2 ul li{list-style-type: none;transition: all 0.3s ease;margin-right: 0.8rem;width: calc(25% - 2.8rem);width: 25%;}
+.main .visual2 ul li:hover {transform: translateY(-2rem);background-color: #007bff;box-shadow: 0px 4px 10px rgb(9 26 70 / 78%);border-radius: 1rem;}
+.main .visual2 ul li:hover .item {color: #fff;}
+.main .visual2 ul li:hover .desc strong {color: #fff;position: relative;}
+
+.main .visual2 ul li:hover .desc strong::after{content: "";position: absolute;bottom: -2.7rem; left: 0;width: 100%;height: 2px; background-color: #007bff;animation: underlineEnter 0.3s forwards; transform: translateY(-2em);}
+.main .visual2 ul li:hover .desc p {color: #e0e0e0;}
+.main .visual2 ul li:hover .icon {background: #e0e0e0;}
 .main .visual2 a{text-decoration: none;}
+.main .visual2 .item{display: flex; align-items: flex-end;}
+.main .visual2 .item {display: flex;height: 100%;padding: 2.1rem 1.1rem;background: #F4F6F8;border-radius: 1rem;align-items: center;transition: all 0.3s ease;}
+.main .visual2 ul li:hover .item {background-color: #007bff;border-radius: 1rem;}
+.main .visual2 .desc{padding-left: 1.7rem;letter-spacing: -.05rem;text-align: left;}
+.main .visual2 .icon{width: 6.6rem;height: 6.6rem;border-radius: 100%;overflow: hidden;background: #fff;flex-shrink: 0;}
+.main .visual2 img{max-width: 100%;border: 0 none;font-size: 0;vertical-align: middle;position: relative;top: 0.7rem;}
+.main .visual2 .desc strong{display: inline-block;position: relative;font-size: 1.4rem;font-weight: 800;color: #000;transition: all .2s;}
+.main .visual2 .desc p{margin-top: 0.5rem;color: #4D4D4D;line-height: 1.6rem;font-size: 1.1rem;transition: all .2s;}
+.main .visual2 li{margin-right: 3.2rem;width: calc(25% - 2.8rem);}
+@media (max-width: 1024px) {
+  .main .visual2 ul {
+      flex-wrap: wrap !important;
+  }
+}
+@media (max-width: 1024px) {
+  .main .visual2 li {
+      width: calc(49% - 2.8rem) !important;
+      margin-top: 1rem;
+  }
+}
 /****** notice ******/
 .notice{width: 140rem;max-width: calc(100% - 4rem);margin-right: auto; margin-left: auto;position: relative;}
 .notice .main_wrap{position: relative;width: 140rem;padding-bottom: 9rem;max-width: calc(100% - 4rem);margin-right: auto;margin-left: auto;position: relative;}
