--- a/dcs_react/src/index.css
+++ b/dcs_react/src/index.css
@@ -95,9 +95,9 @@ code {
 }
 
 .main .visual2 ul{list-style-type: none;padding: 0;display: flex;justify-content: space-around;}
-.main .visual2 ul li{list-style-type: none;transition: all 0.3s ease;margin-right: 0.8rem;width: calc(25% - 2.8rem);width: 25%;}
-.main .visual2 ul li:hover {transform: translateY(-2rem);background-color: #007bff;box-shadow: 0px 4px 10px rgb(9 26 70 / 78%);border-radius: 1rem;}
-.main .visual2 ul li:hover .item {color: #fff;}
+.main .visual2 ul li{list-style-type: none;transition: all 0.3s ease;margin-right: 0.8rem;width: calc(25% - 2.8rem);width: 25%;border-radius: 1rem;}
+.main .visual2 ul li:hover {transform: translateY(-2rem);box-shadow: 0px 4px 10px rgb(9 26 70 / 78%);border-radius: 1rem;}
+.main .visual2 ul li:hover .item {color: #fff;border-radius: 1rem;}
 .main .visual2 ul li:hover .desc strong {color: #fff;position: relative;}
 
 .main .visual2 ul li:hover .desc strong::after{content: "";position: absolute;bottom: -2.7rem; left: 0;width: 100%;height: 2px; background-color: #007bff;animation: underlineEnter 0.3s forwards; transform: translateY(-2em);}
@@ -123,6 +123,7 @@ code {
       width: calc(49% - 2.8rem) !important;
       margin-top: 1rem;
   }
+  .main .visual2 ul li:hover {transform: translateY(-0.6rem);}
 }
 /****** notice ******/
 .notice{width: 140rem;max-width: calc(100% - 4rem);margin-right: auto; margin-left: auto;position: relative;}
