--- a/dcs_react/src/index.css
+++ b/dcs_react/src/index.css
@@ -76,10 +76,9 @@ code {
 /****** main ******/
 .main .main_wrap{position: relative !important;width: 140rem;padding-bottom: 9rem;max-width: calc(100% - 4rem);margin-right: auto;margin-left: auto;position: relative;}
 .main .section{padding: 5.6rem 0 5rem;}
-.main .section.visual2{padding: 5.6rem 0 5rem;padding-top: 0;}
+.main .section.visual2{padding: 5.6rem 0 0rem;padding-top: 0;}
 .main .visual1{width: 100%;display: flex;align-items: center;justify-content: space-between;}
 .main .visual1 .about{display: flex;max-width: 32.5rem;align-items: center;text-align: left;}
-.main .visual1 .about-l{width: 25rem;}
 .main .visual1 .about-l h1{font-size: 3rem;text-align: left;font-weight: 900;}
 .main .visual1 .about-text{padding-left: 1.1rem;}
 .main .visual1 .about-text h2{margin: 0; font-size: 1.8rem;}
@@ -94,12 +93,12 @@ code {
   100%{transform:rotate(360deg)}
 }
 
+
 .main .visual2 ul{list-style-type: none;padding: 0;display: flex;justify-content: space-around;}
 .main .visual2 ul li{list-style-type: none;transition: all 0.3s ease;margin-right: 0.8rem;width: calc(25% - 2.8rem);width: 25%;border-radius: 1rem;}
 .main .visual2 ul li:hover {transform: translateY(-2rem);box-shadow: 0px 4px 10px rgb(9 26 70 / 78%);border-radius: 1rem;}
 .main .visual2 ul li:hover .item {color: #fff;border-radius: 1rem;}
 .main .visual2 ul li:hover .desc strong {color: #fff;position: relative;}
-
 .main .visual2 ul li:hover .desc strong::after{content: "";position: absolute;bottom: -2.7rem; left: 0;width: 100%;height: 2px; background-color: #007bff;animation: underlineEnter 0.3s forwards; transform: translateY(-2em);}
 .main .visual2 ul li:hover .desc p {color: #e0e0e0;}
 .main .visual2 ul li:hover .icon {background: #e0e0e0;}
@@ -113,6 +112,17 @@ code {
 .main .visual2 .desc strong{display: inline-block;position: relative;font-size: 1.4rem;font-weight: 800;color: #000;transition: all .2s;}
 .main .visual2 .desc p{margin-top: 0.5rem;color: #4D4D4D;line-height: 1.6rem;font-size: 1.1rem;transition: all .2s;}
 .main .visual2 li{margin-right: 3.2rem;width: calc(25% - 2.8rem);}
+
+
+.main .section.visual3{display: flex;align-items: baseline;justify-content: space-between;}
+.main .section.visual3 .noitce{border: 0.07rem solid #e2e2e2; padding: 1rem 2rem;border-radius: 1rem;}
+.main .section.visual3 .noitce ul{display: grid;gap: 1.5rem;}
+.main .section.visual3 .noitce ul li{padding: 0 6rem 1.2rem 0; border-bottom: 0.07rem dashed #e2e2e2;}
+.main .section.visual3 .noitce h4{text-align: left;}
+.main .section.visual3 .noitce em{background: green;padding: 0.3rem 0.4rem;color: #fff; font-weight: 600;border-radius: 1rem;}
+.main .section.visual3 ul{list-style-type: none;padding: 0;}
+.main .section.visual3 .noitce a{text-decoration: none;color: #000;}
+
 @media (max-width: 1024px) {
   .main .visual2 ul {
       flex-wrap: wrap !important;
