--- a/dcs_react/src/index.css
+++ b/dcs_react/src/index.css
@@ -1,3 +1,5 @@
+@import '~remixicon/fonts/remixicon.css';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -114,15 +116,67 @@ code {
 .main .visual2 li{margin-right: 3.2rem;width: calc(25% - 2.8rem);}
 
 
-.main .section.visual3{display: flex;align-items: baseline;justify-content: space-between;}
-.main .section.visual3 .noitce{border: 0.07rem solid #e2e2e2; padding: 1rem 2rem;border-radius: 1rem;}
-.main .section.visual3 .noitce ul{display: grid;gap: 1.5rem;}
-.main .section.visual3 .noitce ul li{padding: 0 6rem 1.2rem 0; border-bottom: 0.07rem dashed #e2e2e2;}
-.main .section.visual3 .noitce h4{text-align: left;}
-.main .section.visual3 .noitce em{background: green;padding: 0.3rem 0.4rem;color: #fff; font-weight: 600;border-radius: 1rem;}
+.main .section.visual3{display: flex;align-items: flex-start;justify-content: space-between;}
+.main .section.visual3 .noitce{border: 0.07rem solid #e2e2e2; padding: 3rem 1.6rem;border-radius: 1rem;}
+.main .section.visual3 .noitce ul{display: grid;gap: 1rem;}
+.main .section.visual3 .noitce ul li{padding: 0 16rem 1.2rem 5rem; border-bottom: 0.07rem dashed #e2e2e2;position: relative;line-height: 1.9rem;}
+.main .section.visual3 .visual3m{text-align: left;font-size: 1.7rem;margin: 0;margin-bottom: 2.4rem;font-weight: 600;}
+.main .section.visual3 .noitce em{background: #E5E5E5;padding: 0rem 1rem;color: #000; font-weight: 600;border-radius: 1rem;font-style: normal;position: absolute;top: 0;left: 0;font-weight: 900;}
+.main .section.visual3 .noitce strong{font-size: 1.1rem;font-weight: 600;}
 .main .section.visual3 ul{list-style-type: none;padding: 0;}
 .main .section.visual3 .noitce a{text-decoration: none;color: #000;}
+.main .section.visual3 .blue{color: #2F5BC1 !important;background: #DEE8FF !important;}
 
+.main .section.visual3 .action .controls button{position: relative;border: 0 none;background: none;padding: 0 none;cursor: pointer;z-index: 1;width: 2rem;height: 2rem;line-height: 2rem;}
+.controls .arrow:before, .popupzone .controls .con_btn:before {content: '\EFDA';font-family: "remixicon";display: block;width: 100%;height: 100%;color: #000;font-size: 1.6rem;}
+.controls .arrow.prev:before {content: '\EA64';}
+.controls .arrow.next:before {content: '\EA6E';}
+.popupzone .controls .con_btn.play{opacity: 0;overflow: hidden;display: none;}
+.popupzone .controls .con_btn.stop{opacity: 0;overflow: hidden;display: none;}
+.popupzone .controls .con_btn.stop.active{opacity: 1;overflow: visible;display: inline;}
+.popupzone .controls .con_btn.play.active{opacity: 1;overflow: visible;display: inline;}
+.popupzone .controls .con_btn.play.active:before {content: "\F012";}
+
+.swiper.active {
+  opacity: 1;
+  z-index: 1; /* 현재 활성화된 슬라이드가 위로 오도록 설정 */
+}
+
+/* 이전 슬라이드는 숨겨짐 */
+.swiper.inactive {
+  opacity: 0;
+  z-index: 0;  /* 비활성화된 슬라이드는 뒤로 가도록 설정 */
+}
+.swiper {
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  overflow: hidden;
+  list-style: none;
+  padding: 0;
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: opacity 1s ease-in-out;
+  opacity: 0;  /* 기본적으로 투명 처리 */
+}
+.swiper-pointer-events {
+  touch-action: pan-y;
+}
+.main .section.visual3 .actives{
+  width: calc(100% - 54.78571% - 0.1rem);
+}
+.main .section.visual3 .popupzone{position: relative;display: block;width: 100%;height: 27.3rem;}
+.main .section.visual3 .actives{position: relative;padding: 2rem;border: 0.07rem solid #e2e2e2;border-radius: 1rem;}
+.main .section.visual3 .popupzone .controls{position: absolute;top: -4rem;right: 0rem;}
+.main .section.visual3 .popupzone .controls button{padding: 0;border: 0 none; background: none;}
+.main .section.visual3 .popupzone img{width: 100%;}
+.popupzone .pop_slide_wrap{position: relative;}
+.popupzone .pop_slide{height: 23rem;}
+.sr-only{overflow: hidden;position: absolute;width: 1px;height: 1px;margin: -1px;padding: 0;border: 0 none;clip: rect(0,0,0,0);}
 @media (max-width: 1024px) {
   .main .visual2 ul {
       flex-wrap: wrap !important;
