--- a/dcs_react/src/index.css
+++ b/dcs_react/src/index.css
@@ -76,7 +76,7 @@ code {
 }
 
 /****** main ******/
-.main .main_wrap{position: relative !important;width: 140rem;padding-bottom: 9rem;max-width: calc(100% - 4rem);margin-right: auto;margin-left: auto;position: relative;}
+.main .main_wrap{position: relative !important;width: 140rem;padding-bottom: 2rem;max-width: calc(100% - 4rem);margin-right: auto;margin-left: auto;position: relative;}
 .main .section{padding: 5.6rem 0 5rem;}
 .main .section.visual2{padding: 5.6rem 0 0rem;padding-top: 0;}
 .main .visual1{width: 100%;display: flex;align-items: center;justify-content: space-between;}
@@ -136,10 +136,10 @@ code {
 .popupzone .controls .con_btn.stop.active{opacity: 1;overflow: visible;display: inline;}
 .popupzone .controls .con_btn.play.active{opacity: 1;overflow: visible;display: inline;}
 .popupzone .controls .con_btn.play.active:before {content: "\F012";}
-.activecomment{background: #007bff;padding: 1rem;width: 100%;text-align: left;font-weight: 600;color: #fff;border-bottom-left-radius: 1rem;border-bottom-right-radius: 1rem;transition: 'opacity 1s ease-in-out';top : 24rem;position: absolute;font-size: 1.3rem;}
-.swiper.active {opacity: 1;z-index: 1;}
-.swiper.inactive {opacity: 0;z-index: 0;}
-.swiper {margin-left: auto;margin-right: auto;position: relative;overflow: hidden;list-style: none;padding: 0;z-index: 1;position: absolute;top: 0;left: 0;width: 100%;height: 100%;transition: opacity 1s ease-in-out;opacity: 0;}
+.activecomment{background: #040860;padding: 1rem;width: 100%;text-align: left;font-weight: 600;color: #fff;border-bottom-left-radius: 1rem;border-bottom-right-radius: 1rem;transition: 'opacity 1s ease-in-out';top : 24rem;position: absolute;font-size: 1.3rem;}
+.popupzone .swiper.active {opacity: 1;z-index: 1;}
+.popupzone .swiper.inactive {opacity: 0;z-index: 0;}
+.popupzone .swiper {margin-left: auto !important;margin-right: auto !important;position: relative !important;overflow: hidden !important;list-style: none !important;padding: 0 !important;z-index: 1 !important;position: absolute !important;top: 0 !important;left: 0 !important;width: 100% !important;height:24rem !important;transition: opacity 1s ease-in-out !important;}
 .swiper-pointer-events {touch-action: pan-y;}
 .main .section.visual3 .actives{width: calc(100% - 54.78571% - 0.1rem);}
 .main .section.visual3 .popupzone{position: relative;display: block;width: 100%;height: 27.3rem;}
@@ -148,24 +148,23 @@ code {
 .main .section.visual3 .popupzone .controls button{padding: 0;border: 0 none; background: none;}
 .main .section.visual3 .popupzone img{width: 100%;}
 .popupzone .pop_slide_wrap{position: relative;}
-.popupzone .pop_slide{height: 24rem;border-top-right-radius: 1rem; border-top-left-radius: 1rem;}
+.popupzone .pop_slide{height: 24rem;border-top-right-radius: 1rem !important; border-top-left-radius: 1rem !important;}
 
 
 .main .section.visual4 {padding: 0rem 0 5rem;}
 .main .section.visual4 .title{text-align: left;}
 .main .section.visual4 .title p{font-size: 2rem;font-weight: 800;color: #007bff;}
 .main .section.visual4 .title span{font-size: 1.2rem;}
-.main .section.visual4 .wrap ul{list-style-type: none; padding: 0;display: flex;align-items: flex-start;justify-content: space-between;}
+.main .section.visual4 .wrap ul{list-style-type: none; padding: 0;display: flex;align-items: flex-start;justify-content: space-between;margin-top: 4rem;}
 .main .section.visual4 .wrap ul li a{text-decoration: none; }
-.main .section.visual4 .wrap-menu{text-align: left;background: #005eb8;border-radius: 1rem;padding: 2rem 3.6rem;width: 31%;transition: all 0.3s ease;}
+.main .section.visual4 .wrap-menu{text-align: left;background: #005eb8;border-radius: 1rem;padding: 2rem 3.6rem;width: 31%;transition: all 0.3s ease;height: 17rem;}
 .main .section.visual4 .wrap-menu:hover{transform: translateY(-2rem);box-shadow: 0px 4px 10px rgb(9 26 70 / 78%);border-radius: 1rem;}
 .main .section.visual4 .profile{background: #0086bf !important;}
 .main .section.visual4 .sponser{background: #003f77 !important;}
 .main .section.visual4 .wrap-menu a{color: #fff;font-size: 1.3rem;font-weight: 700;}
 .wrapLink{font-size: 1rem;margin-top: 4rem;position: relative;}
-.wrapLink::before{content: '';width:100%;position: absolute;bottom: 0;height: 0.07rem;background: #fff;}
-.wrapLink::after{content: '>';width: 2rem;height: 2rem;position: absolute;bottom: -1.3rem;right: -1.4rem;font-weight: 400;}
-.main .section.visual4 .wrap-menu span{font-size: 1rem;font-weight: 500;}
+.main .section.visual4 .wrap-menu:hover .wrapLink::after{content: "";position: absolute;bottom: -2.7rem; left: 0;width: 100%;height: 1px; background-color: #fff;animation: underlineEnter2 0.8s forwards; transform: translateY(-2em);}
+.main .section.visual4 .wrap-menu span{font-size: 1rem;font-weight: 500;display: block;height: 2rem;}
 .main .section.visual4 .wrap-menu:hover {box-shadow: 0px 4px 10px rgba(9, 26, 70, 0.78);border-radius: 1rem;}
 .main .section.visual4 .sponser:hover {transform: translateY(-2rem);}
 .sr-only{overflow: hidden;position: absolute;width: 1px;height: 1px;margin: -1px;padding: 0;border: 0 none;clip: rect(0,0,0,0);}
@@ -181,6 +180,22 @@ code {
   }
   .main .visual2 ul li:hover {transform: translateY(-0.6rem);}
 }
+@keyframes underlineEnter2 {
+  from {
+      width: 0;
+  }
+  to {
+      width: 100%;
+  }
+}
+
+.visual5 .swiper{opacity: 1;}
+.visual5 .footbanner {width: 100%;padding: 20px;}
+.visual5 .swiper-wrapper{justify-content: space-around;}
+.visual5 .swiper-container {width: 100%;height: auto;}
+.visual5 .swiper-slide {display: flex;justify-content: center;align-items: center;}
+.visual5 .swiper-slide img {width: 13rem;height: 8rem;object-fit: cover;border-radius: 1rem; }
+.visual5 {padding-bottom: 0 !important;}
 /****** notice ******/
 .notice{width: 140rem;max-width: calc(100% - 4rem);margin-right: auto; margin-left: auto;position: relative;}
 .notice .main_wrap{position: relative;width: 140rem;padding-bottom: 9rem;max-width: calc(100% - 4rem);margin-right: auto;margin-left: auto;position: relative;}
@@ -199,7 +214,7 @@ code {
 .footer .f-bottom{text-align: left;}
 .footer .f-bottom p {margin-bottom: 0;}
 .footer .f-bottom span{position: relative;padding-right: 3px;padding-right: 2rem;}
-.footer .f-bottom span:not(:nth-child(4))::before{position: absolute;content: "";height: 100%;border-right: 1px solid #fff;right: 0.8rem;}
+.footer .f-bottom span:not(:nth-child(3))::before{position: absolute;content: "";height: 100%;border-right: 1px solid #fff;right: 0.8rem;}
 .footer .copyright{text-align: left;padding: 3rem 0 0 0;color: rgba(255, 255, 255, 0.4);font-size: 0.8rem;}
 .footer a{color: #fff;}
 .footer .pwr{font-size: 0.8rem;}
