--- a/dcs_react/src/index.css
+++ b/dcs_react/src/index.css
@@ -76,7 +76,7 @@ code {
 }
 
 /****** main ******/
-.main .main_wrap{position: relative !important;width: 140rem;padding-bottom: 2rem;max-width: calc(100% - 4rem);margin-right: auto;margin-left: auto;position: relative;}
+.main_wrap{position: relative !important;width: 140rem;padding-bottom: 2rem;max-width: calc(100% - 4rem);margin-right: auto;margin-left: auto;position: relative;}
 .main .section{padding: 5.6rem 0 5rem;}
 .main .section.visual2{padding: 5.6rem 0 0rem;padding-top: 0;}
 .main .visual1{width: 100%;display: flex;align-items: center;justify-content: space-between;}
@@ -205,6 +205,20 @@ code {
 @keyframes visual_scale {
   100%{transform:scale(1)}
 }
+
+/****** intro ******/
+.intro .visual{position: relative;height: 26.3rem;margin-bottom: 5rem;color: #fff;text-align: left;}
+.intro .visual strong{position: absolute;bottom: 7.5rem;left: 0;width: 100%;font-size: 4.9rem;font-weight: 800;}
+.intro .visual .img{position: absolute;top: 50%;left: 50%;display: block;z-index: -1;width: 100vw;height: 100%;overflow: hidden;transform: translate(-50%, -50%);}
+.intro .visual .img img{max-width: inherit;width: 100%;height: 100%;object-fit: cover;transform: scale(1.2);animation: visual_scale 7s;animation-fill-mode: forwards;}
+
+/******hitory******/
+.hitory_wrap .title{font-weight: 800;font-size: 2rem;text-align: center;}
+.hitory_wrap .title span{display: block;text-align: center;font-size: 1.3rem;font-weight: 800;color: #005eb8;}
+.hitory_wrap ol{position: relative;list-style-type: none;}
+.hitory_wrap ol::before{content: '';width: 1px;left: 50%;top: 0;transform: translateX(-50%);position: absolute;background: #D5D5D5;height: 100%; -webkit-print-color-adjust: exact;}
+.hitory_wrap ol li{position: relative;}
+
 /****** footer ******/
 .footer {position: relative; width: 100%;background-color: #333; color: white;text-align: center;padding: 20px 0;}
 .footer .main_wrap{position: relative;width: 140rem;max-width: calc(100% - 4rem);margin-right: auto;margin-left: auto;position: relative;}
