--- a/dcs_react/src/index.css
+++ b/dcs_react/src/index.css
@@ -28,12 +28,13 @@ a{
 .header.white.hover:hover .depth2 a:hover{color: blue;}
 .header.white.fixed .depth1,.header.white.fixed .depth2 a{color: #000;}
 .header.white::before{background: #ffffffc7;;}
-.header::before{content: "";position: absolute;top: 0;left: 0;right: 0;background: rgb(20 38 129 / 78%);height: var(--header-bg-height, 0%);opacity: var(--header-bg-opacity, 1);transition: height calc(var(--anim-duration)* 5) cubic-bezier(.23,1,.32,1), opacity calc(var(--anim-duration)* 3);transition-delay: calc(var(--anim-duration)* 1);}
+.header::before{content: "";position: absolute;top: 0;left: 0;right: 0;background: rgb(8 15 61 / 78%);height: var(--header-bg-height, 0%);opacity: var(--header-bg-opacity, 1);transition: height calc(var(--anim-duration)* 5) cubic-bezier(.23,1,.32,1), opacity calc(var(--anim-duration)* 3);transition-delay: calc(var(--anim-duration)* 1);}
 .header.hover::before {height: calc(var(--depth2-height, 100%)) !important; opacity: 1;}
 .header.fixed::before{height: var(--header-bg-height, 100%);box-shadow: 0px 4px 10px rgb(9 26 70 / 78%);}
 .header .container{padding: 0 clamp(40px, 3.125vw, 80px);margin: 0 auto;}
 .header .header-content{width: 100%;max-width: 192rem;display: flex;justify-content: center;margin: auto;position: relative;height: var(--header-height, 100px);}
 .header .logo{position: absolute;top: 50%;transform: translateY(-50%);left: 0;}
+.header .logo img{width:200px; height:100px; object-fit: contain; }
 .header .depth1{line-height: 6rem;font-weight: 700;padding-bottom: .3rem;transition: color 0.3s ease; font-size:18px;position: relative;display: block;}
 .header a{text-decoration: none; color: #fff;}
 .header .nav .gnb{display: flex;height: 17rem;}
