--- a/dcs_react/src/index.css
+++ b/dcs_react/src/index.css
@@ -276,7 +276,7 @@ a{
 
 /****** greeting ******/
 .greeting_wrap{padding: 0 8rem;}
-.greeting_wrap .greeting_title{display: flex;align-items: center;justify-content: space-between;font-size: 2.7rem !important;font-weight: 700;}
+.greeting_wrap .greeting_title{display: flex;align-items: center;justify-content: space-between;font-size: 2.7rem !important;font-weight: 700;color: #454444;}
 .greeting_wrap .img_top img{width: 24rem;}
 .greeting_wrap .img_bottom{margin-top: 1.5rem;}
 .greeting_wrap .img_bottom p:nth-child(1){font-size: 1.5rem;margin-bottom: .5rem;}
